Fix verse overflow

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -141,7 +141,6 @@ abbr.no-caps {
 // ----------------------------------------------------------------------------
 pre {
   @include trailer(1);
-  overflow-x: auto;
 }
 
 .code .gist .gist-file {
